# claude-multi-account-manager

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.ko.md  README.md  account_manager.py  build.sh  install.sh  pyproject.toml  uninstall.sh
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.claude-state/: context-sync.json  usage-cache.json
.claude-state/logs/: hooks.jsonl
.serena/: project.yml
.serena/memories/: MEMORY.md
claude_account_manager/: __init__.py  __main__.py  account.py  api.py  codex_provider.py  config.py  keychain.py  logger.py  storage.py  telegram.py  token.py  ui.py  version.py
claude_account_manager/commands/: __init__.py  add_cmd.py  export_cmd.py  import_cmd.py  launch_cmd.py  list_cmd.py  logs_cmd.py  misc_cmd.py  pull_cmd.py  push_cmd.py  remove_cmd.py  switch_cmd.py  token_cmd.py
commands/: account-add.md  account-check.md  account-remove.md  account-set-plan.md  account-switch.md  account.md  add.md  check.md  list.md  release.md  remove.md  set-plan.md  switch.md
docs/: ARCHITECTURE.md  OAUTH.md
hooks/: hooks.json
hooks-handlers/: prompt-submit.sh  session-start.sh
skills/: export.md  import.md  release.md
skills/add/: SKILL.md
skills/check/: SKILL.md
skills/export/: SKILL.md
skills/import/: SKILL.md
skills/list/: SKILL.md
skills/logs/: SKILL.md
skills/pull/: SKILL.md
skills/push/: SKILL.md
skills/release/: SKILL.md
skills/remove/: SKILL.md
skills/repair/: SKILL.md
skills/report/: SKILL.md
skills/set-plan/: SKILL.md
skills/switch/: SKILL.md
(+13 files in other folders)
