[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-account-manager"
version = "2.1.13"
description = "Multi-account manager for Claude Code CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ezhoon"}
]
keywords = ["claude", "anthropic", "account", "manager", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ezhoon/multi-login-claude"
Repository = "https://github.com/ezhoon/multi-login-claude"
Issues = "https://github.com/ezhoon/multi-login-claude/issues"

[project.scripts]
claude-account = "claude_account_manager:main"
account = "claude_account_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_account_manager*"]
